--- a/css/main.scss
+++ b/css/main.scss
@@ -27,6 +27,15 @@ img {
   height: auto;
 }
 
+// //---- MEDIA QUERY PRE 680px A MENEJ ----
+
+// @media only screen and (max-width: 42.5em) {
+//   body,
+//   html {
+//     font-size: 110%;
+//   }
+// }
+
 //---- TYPOGRAFIA ----
 
 @font-face {
