--- a/css/scss/_homepage.scss
+++ b/css/scss/_homepage.scss
@@ -1,11 +1,11 @@
 .slider {
-  position: fixed;
+  position: absolute;
   top: $header-height;
   height: $header-height;
   width: 100%;
   background-color: $secondary-color;
   font-size: 0.75rem;
-  text-transform: uppercase;
+  text-transform: capitalize;
   border-bottom: 1px solid $main-color;
   user-select: none;
   z-index: -1;
@@ -13,10 +13,11 @@
   justify-content: space-between;
   align-items: center;
   overflow: hidden;
+  border-top: 1px solid #000;
   p {
     white-space: nowrap;
     padding: 0 4rem;
-    animation: scroll 20s linear infinite;
+    animation: scroll 15s linear infinite;
   }
 }
 @keyframes scroll {
